blog: fix overflow-x of code blocks

--- a/blog-nextjs/styles/base.css
+++ b/blog-nextjs/styles/base.css
@@ -28,6 +28,7 @@ html {
 
 body {
   font-size: 1.3rem;
+  overflow-x: hidden;
 }
 
 img {
